@@ -1,7 +1,11 @@
 #! /usr/bin/make -f
 
-export PYBUILD_NAME=six
-export PYBUILD_TEST_PYTEST=1
+export PYBUILD_NAME := six
+export PYBUILD_TEST_PYTEST := 1
+export PYBUILD_BEFORE_TEST := cp -a test_six.py {build_dir}/
+export PYBUILD_AFTER_TEST := \
+	rm -rf {build_dir}/test_six.py \
+	       {build_dir}/*.pyc {build_dir}/__pycache__
 
 
 %:
